<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCancel"
            android:background="@color/colorTransparent"
            android:drawableLeft="@drawable/btn_previous_big"
            android:drawableStart="@drawable/btn_previous_big"
            android:layout_marginTop="20dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/btn_previous_big"
            />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_paper_plane" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/description_reset_password"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/txt_Email_resetpass"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_rounded_edittext"
                android:drawableStart="@drawable/ic_mail_outline_24px"
                android:drawableLeft="@drawable/ic_mail_outline_24px"
                android:hint="Email"
                android:inputType="textNoSuggestions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextFields" />


        </LinearLayout>

        <View
            android:id="@+id/view_reseter"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@color/colorPrimary" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <ProgressBar
                android:id="@+id/progress_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:elevation="2dp"
                android:indeterminateTint="@color/colorPrimary"
                android:translationZ="2dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_resetPass"
                style="@style/styleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/reset_password"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                android:transitionName="button_transition_forgot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </FrameLayout>

    </LinearLayout>


</ScrollView>