<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/sizeLayoutRegister"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/styleTitle_OnBroading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_create" />

            <TextView
                style="@style/styleDescription.CurrentContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/PasswordDes" />


            <EditText
                android:id="@+id/txtNewPass"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_rounded_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:hint="@string/new_password"
                android:inputType="textNoSuggestions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txtConfirmPass"
                style="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_rounded_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:hint="@string/confirm_password"
                android:inputType="textNoSuggestions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_below="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar_fm5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="2dp"
                android:translationZ="2dp"
                android:layout_gravity="center|center_vertical"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btnFm5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnFm5"
                style="@style/styleButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="Finish" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>